# wx-article-sync

./: .gitignore  README.md  SKILL.md  config.example.json  pyproject.toml
assets/: config.example.json  launchd.example.plist
references/: configuration.md  ima.md  operations.md  troubleshooting.md
scripts/: ima_check.py  ima_manifest.py  inspect_state.py  validate_config.py
src/wx_article_sync/: __init__.py  cli.py  client.py  config.py  logging.py  pdf.py  sync.py
tests/: test_logging.py  test_skill_scripts.py  test_sync.py
