[project]
name = "wx-article-sync"
version = "0.1.0"
description = "Scheduled WeChat article synchronization via the mptext public API."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
wx-article-sync = "wx_article_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

